--- a/templates/lieder-theme/articles/la-direccio.html
+++ b/templates/lieder-theme/articles/la-direccio.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% for article in object.get_article_list %}
+{% for article in object_list %}
     <h2>{{ article.name }}</h2>
     {% if article.image %}
         <img src={{ article.get_image_url }} alt="{{ article.name }}" height="{{ article.get_image_height }}"
