--- a/templates/lieder-theme/articles/section_detail.html
+++ b/templates/lieder-theme/articles/section_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <ul>
-{% for article in object.get_article_list %}
+{% for article in object_list %}
     <li>
     {% if article.image %}
         <a href="{{ article.get_absolute_url }}">
