--- a/templates/lieder-theme/articles/section_detail.html
+++ b/templates/lieder-theme/articles/section_detail.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div id="content">
 
 <ul>
 {% for article in object_list %}
@@ -18,4 +19,5 @@
 {% endfor %}
 </ul>
 
+<div>
 {% endblock %}
