--- a/templates/lieder-theme/articles/article_list.html
+++ b/templates/lieder-theme/articles/article_list.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div id="content">
 
 <ul>
 {% for article in object_list %}
@@ -17,5 +18,6 @@
 
 {% endfor %}
 </ul>
-	
+
+</div>
 {% endblock %}
