--- a/templates/lieder-theme/articles/enregistraments_detail.html
+++ b/templates/lieder-theme/articles/enregistraments_detail.html
@@ -1,24 +1,23 @@
-{% load i18n %}
-{% include "head.html" %}
+{% extends "base.html" %}
+{% load i18n articletags %}
 
+{% block content %}
+<div id="content">
+    <div id="taulaenregistrament">
+        {% show_enregistraments_list %}
+    </div>
+</div>	
+{% endblock %}
 
-<div id="taulaeregistrament-unitat">
-    <div id="taulaeregistrament-unitat1">
-        <img src="/media-lieder/img/logoAB.png" width="390" height="65">
-    </div>
-    <div id="taulaeregistrament-unitat2">
-        <div id="taulaeregistrament-unitat5">
-        </div>
-    </div>
-    <div id="taulaeregistrament-unitat3">
+{% block sidebar %}
+    {% include "menus/get-menu-vert.html" %}
+
+    <div id="taulaenregistrament-unitat3">
         {% if object.image %}
-        <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="{{ object.get_image_height }}"
-        width="{{ object.get_image_width }}"/>
+        <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height=74" width="74"/>
         {% endif %}
-    </div>
-    <div id="taulaeregistrament-unitat4">
+
         <h3>{{ object.name }}</h3>
         {{ object.body }}
     </div>
-</div>
-
+{% endblock %}
