--- a/templates/lieder-theme/articles/premsa.html
+++ b/templates/lieder-theme/articles/premsa.html
@@ -1,8 +1,9 @@
-{% load i18n %}
 {% extends "base.html" %}
+{% load i18n %}
 
 
 {% block content %}
+<div id="content">
 
 {% for article in object_list %}
     
@@ -15,4 +16,6 @@
     <p class="filet">&nbsp;</p>
 {% endfor %}
 
+</div>
 {% endblock %}
+
