--- a/templates/lieder-theme/articles/section_list.html
+++ b/templates/lieder-theme/articles/section_list.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div id="content">
 
 <ul>
 {% for section in object_list %}
@@ -12,4 +13,5 @@
 {% endfor %}
 </ul>
 
+<div>
 {% endblock %}
