--- a/templates/lieder-theme/links/link_detail.html
+++ b/templates/lieder-theme/links/link_detail.html
@@ -1,13 +1,13 @@
-{% load i18n %}
 {% extends "base.html" %}
+{% load i18n %}
 
 
 {% block content %}
-
+<div id="content">
 	<h2><a href="{{ object.url }}">{{ object.name }}</a></h2>
 	{% if object.description %}
             <p>{{ object.description }}</p>
 	{% endif %}
         <p class="filet">&nbsp;</p>
-
+</div>
 {% endblock %}
