--- a/templates/lieder-theme/links/linkcategory_list.html
+++ b/templates/lieder-theme/links/linkcategory_list.html
@@ -1,9 +1,10 @@
-{% load i18n %}
 {% extends "base.html" %}
+{% load i18n %}
 
 
 {% block content %}
-      
+<div id="content">
+
 {% for categ in object_list %}
 	<h2><a href="{{ categ.get_absolute_url }}">{{ categ.catname }}</a></h2>
         {% if categ.catdescription %}
@@ -11,4 +12,5 @@
 	{% endif %}
 {% endfor %}
 
+</div>
 {% endblock %}
