--- a/templates/lieder-theme/programmes/programme_detail.html
+++ b/templates/lieder-theme/programmes/programme_detail.html
@@ -1,8 +1,8 @@
-{% load i18n %}
 {% extends "base.html" %}
-
+{% load i18n %}
 
 {% block content %}
+<div id="content">
 <div id="programmes">      
 
 <h1>{{ object.name|lower }}</h1>
@@ -15,5 +15,5 @@
 </table>
 {{ object.footer }}
 
-</div>
+</div></div>
 {% endblock %}
