--- a/templates/lieder-theme/articles/els-components-del-cor_detail.html
+++ b/templates/lieder-theme/articles/els-components-del-cor_detail.html
@@ -12,7 +12,7 @@
 
     {{ object.body }}
 
-    <div class="singers-list">
+    <div id="singers">
         {% include "singers/singers_emm_table.html" %}
     </div>
 
