--- a/templates/lieder-theme/documents/documentcategory_detail.html
+++ b/templates/lieder-theme/documents/documentcategory_detail.html
@@ -6,7 +6,7 @@
 
 {% for docu in object.document_set.all %}
 	<h2><a href="{{ docu.get_file_url }}">
-        <img class="documents" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
+        <img class="icon" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
         {{ docu.name }}</a></h2>
 	{% if docu.description %}
             {{ docu.description }}
