--- a/templates/lieder-theme/menus/get-menu-horit.html
+++ b/templates/lieder-theme/menus/get-menu-horit.html
@@ -6,7 +6,7 @@
   <div id="globalNavLinks">
     <ul>
 {% for item in menu_items %}
-    {% ifequal request.path item.0 %} <li id="button-active">
+    {% ifequal request.path item.0 %} <li class="button-active">
     {% else %} <li>
     {% endifequal %}
     <a href="{{ item.0 }}">{{ item.1 }}</a>
