--- a/templates/lieder-theme/menus/get-menu-vert.html
+++ b/templates/lieder-theme/menus/get-menu-vert.html
@@ -7,7 +7,7 @@
   
 <ul>
 {% for item in menu_items %}
-    {% ifequal request.path item.0 %} <li id="button-active">
+    {% ifequal request.path item.0 %} <li class="button-active">
     {% else %} <li>
     {% endifequal %}
     <a href="{{ item.0 }}">
