--- a/templates/lieder-theme/programmes/programme_list.html
+++ b/templates/lieder-theme/programmes/programme_list.html
@@ -6,7 +6,7 @@
 <ul>
 {% for prog in object_list %}
 	<li>
-	<a href="{{ prog.get_absolute_url }}">{{ prog.name }}</a>
+	<h2><a href="{{ prog.get_absolute_url }}">{{ prog.name }}</a></h2>
         {% if prog.intro %}
 	<p>{{ prog.intro }}</p>
         {% endif %}
