--- a/templates/lieder-theme/documents/documentcategory_detail.html
+++ b/templates/lieder-theme/documents/documentcategory_detail.html
@@ -5,13 +5,18 @@
 <div id="content">
 
 {% for docu in object.document_set.all %}
+<div class="document-{{object.slug}}">
+
 	<h2><a href="{{ docu.get_file_url }}">
         <img class="icon" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
         {{ docu.name }}</a></h2>
+        <p>
 	{% if docu.description %}
             {{ docu.description }}
 	{% endif %}
-        <p class="filet">&nbsp;</p>
+        </p>
+
+</div>
 {% endfor %}
 
 </div>
