--- a/templates/lieder-theme/articles/la-direccio.html
+++ b/templates/lieder-theme/articles/la-direccio.html
@@ -6,12 +6,16 @@
 <div id="content">
 
 {% for article in object_list %}
+<div class="article-{{ article.section.slug }}">
+    
     <h2>{{ article.name }}</h2>
     {% if article.image %}
-        <img class="text-around" src={{ article.get_image_url }} alt="{{ article.name }}" 
+        <img class="text-around" src="{{ article.get_image_url }}" alt="{{ article.name }}" 
         height="{{ article.get_image_height }}" width="{{ article.get_image_width }}" />
     {% endif %}
     {{ article.body }}
+
+</div>
 {% endfor %}
 
 </div>
