--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -6,18 +6,7 @@
 <head>
 {% block meta %} <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> {% endblock %}
 {% block title %} <title>{% trans "Cor de Cambra Lieder C&aacute;mera" %}</title> {% endblock %}
-{% block style %}
-<style type="text/css">
-<!--
--->
-</style>
-<link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-.Estilo3 {color: #000000}
--->
-</style>
-{% endblock %}
+{% block style %} <link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" /> {% endblock %}
 {% block script %}{% endblock %}
 </head>
 
@@ -34,9 +23,7 @@
 </div>
 {% endblock %}
 
-<!-- div id="content" -->
-      {% block content %}{% endblock %}
-<!-- /div --> 
+{% block content %}{% endblock %}
 
 {% block sidebar %} {% include "menus/get-menu-vert.html" %} {% endblock %}
 {% block bottombar %} {% include "lang-chooser-p.html" %} {% endblock %}
