--- a/templates/lieder-theme/menus/get-menu-vert.html
+++ b/templates/lieder-theme/menus/get-menu-vert.html
@@ -4,14 +4,14 @@
 
 <div id="navBar">   
   <div id="sectionLinks">
-  
+
 <ul>
 {% for item in menu_items %}
     {% ifequal request.path item.0 %} <li class="button-active">
     {% else %} <li>
     {% endifequal %}
     <a href="{{ item.0 }}">
-    <img src="/media-lieder/img/quadrattronja.png" width="15" height="9" border="0" />{{ item.1 }}
+    <img src="/media-lieder/img/quadrattronja.png" width="15" height="9" border="0" />{{ item.1|lower }}
     </a></li>
 {% endfor %}
 </ul>
