--- a/templates/lieder-theme/programmes/programme_detail.html
+++ b/templates/lieder-theme/programmes/programme_detail.html
@@ -5,7 +5,7 @@
 <div id="content">
 <div id="programmes">      
 
-<h1>{{ object.name|lower }}</h1>
+<h1>{{ object.name }}</h1>
 
 <table>
       <tr>
