--- a/templates/lieder-theme/programmes/programme_detail.html
+++ b/templates/lieder-theme/programmes/programme_detail.html
@@ -5,14 +5,12 @@
 <div id="content">
 <div id="programmes">      
 
-<h1>{{ object.name }}</h1>
+<h2>{{ object.name }}</h2>
 
-<table>
-      <tr>
-	<td>{{ object.first_part }}</td>
-	<td>{{ object.second_part }}</td>
-      </tr>      
-</table>
+{{ object.first_part }}
+<p></p>
+{{ object.second_part }}
+
 {{ object.footer }}
 
 </div></div>
