--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -5,7 +5,7 @@
 
 <head>
 {% block meta %} <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> {% endblock %}
-{% block title %} <title>{% trans "Cor de Cambra Lieder C&aacute;mera" %}</title> {% endblock %}
+{% block title %} <title>{% trans "Cor de Cambra Lieder C&agrave;mera" %}</title> {% endblock %}
 {% block style %} <link href="/media-lieder/css/base.css" rel="stylesheet" type="text/css" /> {% endblock %}
 {% block script %}{% endblock %}
 </head>
