'Others' field wasn't show on templates.

--- a/templates/lieder-theme/concerts/concert_detail.html
+++ b/templates/lieder-theme/concerts/concert_detail.html
@@ -43,7 +43,7 @@
     {% endif %}
     </p>
     
-    {% if object.others_markdown %}
+    {% if object.default_others %}
         <p> {% trans "Others" %}: {{ object.others }}</p>
     {% endif %}
 
