--- a/templates/lieder-theme/concerts/concert_list.html
+++ b/templates/lieder-theme/concerts/concert_list.html
@@ -46,7 +46,7 @@
     {% endif %}
     </p>
     
-    {% if object.others_markdown %}
+    {% if object.default_others %}
         <p> {% trans "Others" %}: {{ object.others }}</p>
     {% endif %}
     
