--- a/templates/lieder-theme/concerts/concert_list.html
+++ b/templates/lieder-theme/concerts/concert_list.html
@@ -47,7 +47,7 @@
     </p>
     
     {% if object.default_others %}
-        <p> {% trans "Others" %}: {{ object.others }}</p>
+        <p>{{ object.others }}</p>
     {% endif %}
     
 </div>
