--- a/templates/lieder-theme/concerts/concert_detail.html
+++ b/templates/lieder-theme/concerts/concert_detail.html
@@ -44,7 +44,7 @@
     </p>
     
     {% if object.default_others %}
-        <p> {% trans "Others" %}: {{ object.others }}</p>
+        <p>{{ object.others }}</p>
     {% endif %}
 
 </div>
