--- a/templates/lieder-theme/menus/get-menu-vert.html
+++ b/templates/lieder-theme/menus/get-menu-vert.html
@@ -2,19 +2,11 @@
 
 {% get_menu "vertical" as menu_items %}
 
-<div id="navBar">   
-  <div id="sectionLinks">
-
 <ul>
 {% for item in menu_items %}
     {% ifstartswith request.path item.0 %} <li class="button-active">
     {% else %} <li>
     {% endifstartswith %}
-    <a href="{{ item.0 }}">
-    <img src="/media-lieder/img/quadrattronja.png" width="15" height="9" />{{ item.1|lower }}
-    </a></li>
+    <a href="{{ item.0 }}">{{ item.1|lower }}</a></li>
 {% endfor %}
 </ul>
-
-  </div>
-</div>   
