Making theme IE-friendly.

--- a/templates/lieder-theme/base.html
+++ b/templates/lieder-theme/base.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-{% block meta %} <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> {% endblock %}
+{% block meta %} <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> {% endblock %}
 {% block title %} <title>{% trans "Cor de Cambra Lieder C&agrave;mera" %}</title> {% endblock %}
 {% block style %} <link href="/media-lieder/css/liquid.css" rel="stylesheet" type="text/css" /> {% endblock %}
 {% block script %}{% endblock %}
@@ -18,7 +18,7 @@
 <div id="header">
  <div id="header-menu">{% include "menus/get-menu-horit.html" %}</div>
  <a href="/">
-   <img id="header-logo"  src="/media-lieder/img/logotronja.png" target='/' height="65" width="255">
+   <img id="header-logo" src="/media-lieder/img/logotronja.png" alt='logotronja' height="65" width="255" />
  </a>
 </div>
 {% endblock %}
