--- a/media-lieder/css/liquid.css
+++ b/media-lieder/css/liquid.css
@@ -1,40 +1,36 @@
 body{
-	font-family: verdana;
+	font-family: verdana,sans-serif;
 	font-size: 10px;
         color: black;
         background-color: white;
 	left: auto;
 	right: auto;
-	clip:    rect(auto auto auto auto);
+/* 	clip:    rect(auto auto auto auto); */
 	line-height: normal;
 	padding: 0; margin: 0;
 }
-a { text-decoration: none; }
+a {
+    text-decoration: none;
+    color: black;
+}
 a:link, a:visited { color: black; }
 a:hover, a:active { color: #ea7100; }
 h1, h2, h3, h4, h5, h6 {
-	font-family: verdana;
-	margin: 0px;
-	padding: 0px;
-/* 	text-decoration: none; */
+	margin: 0; padding: 0;
 	line-height: 15px;
 }
 h1{
 	font-size: 13px;
-	font-style: normal;
 }
 h2{
-	font-size: 11px;
 	color: #ea7100;
-	font-style: normal;
+	font-size: 11px;
 	font-weight: bolder;
 }
 h3{
 	font-size: 12px;
-	color: #333333;
 	font-weight: bolder;
-	text-align: left;
-	padding-top: 10px;
+	padding: 10px 0 10px 0;
 }
 ul{ list-style-type: none; }
 img { border: 0px; }
@@ -44,7 +40,8 @@ table td tr { border: 0px; padding: 0px; }
 
 /******** header ********************/
 #header {
-    background: #ea7100 ;
+    color: white ;
+    background-color: #ea7100 ;
     height: 65px;
 }
 #header-logo { float: right ;}
@@ -58,7 +55,7 @@ table td tr { border: 0px; padding: 0px; }
     font-size: 11px ;
     font-weight: bold ;
 }
-#header ul li.button-active a { color: black ; }
+#header ul li.button-active a { color: black; }
 #header ul li a:hover { font-size: 13px ; }
 /************************************/
 
@@ -77,7 +74,10 @@ table td tr { border: 0px; padding: 0px; }
     font-weight: bold;
     color: black ;
 }
-#sidebar-menu ul li a:hover { font-size: 12px ; color: black ; }
+#sidebar-menu ul li a:hover {
+    font-size: 12px ;
+    color: black ; 
+}
 #sidebar-menu ul li.button-active a { color: #ea7100 ; }
 /************************************/
 
@@ -119,12 +119,11 @@ table td tr { border: 0px; padding: 0px; }
     border: 0; padding:0;
     margin: 0 205px 0 0;        /* sidebar space */
     vertical-align: top ;
-    padding: 10px 0px 0px 10px;
+    padding: 10px 20px 10px 10px;
 }
 
-#content img {
-        margin: 1em 1em 1em 0em ;
-}
+#content img { margin: 1em 1em 1em 0em ; }
+#content .article-principals-concerts-item h2 a { color: #ea7100 ; }
 
 .article-la-premsa-ha-dit, .concerts, .document-promoci-concerts {
         border-bottom: 1px solid #cccccc ;
@@ -145,37 +144,42 @@ img.icon {
 }
 #singers table {
 	width: 100%;
-	margin: 0px;
-	padding: 0px;
+	margin: 0px; padding: 0px;
 }
-#taulaenregistrament table{
-	width: 95%;
-	vertical-align: top;
+
+
+/**** enregistraments ***/
+#taulaenregistrament table {
+/* 	width: 95%; */
+/* 	vertical-align: top; */
+        border-spacing: 10px;
+
 }
-#taulaenregistrament tr{
+/*#taulaenregistrament tr{
 	vertical-align: top;
 	height: 100%;
 	width: 90%;
-}
+}*/
 #taulaenregistrament td{
-	height: 100%;
+/* 	height: 100%; */
+        vertical-align: top;
+        width: 50% ;
 	border-bottom: 1px solid #cccccc;
-	border-top: 5px solid white;
-	border-right: 5px solid white;
-	border-left: 5px solid white;
+/*	border-top: 5px solid red;
+	border-right: 5px solid red;
+	border-left: 5px solid red;*/
 }	
-#taulaenregistrament th{
-	height: 100%;
-}	
+/* #taulaenregistrament th { height: 100%; }	 */
 #taulaenregistrament img{
 	width: 100px;
 	height: 100px;
-	vertical-align: bottom;
-	margin-right: 5px;
-	text-align: left;
+/* 	vertical-align: bottom; */
+/* 	text-align: left; */
 	float: left;
-	margin-top: 0px;
-	margin-bottom: 40px;
+	margin: 0 10px 0px 0;
+        padding: 0;
+/* 	margin-bottom: 40px; */
+/* 	margin-right: 5px; */
 }
 
 .songlist-on-sidebar {
@@ -183,31 +187,28 @@ img.icon {
         margin: 0;
 	padding: 15px 0px 10px 15px;
 }
-.songlist-on-sidebar a { color: #ea7100 ; }
+.songlist-on-sidebar a, .songlist-on-sidebar a:visited { color: #ea7100 ; }
 #passeggiata { background-color: #FFC336 ; }
 #canso-tradicional-i-popular-catalana { background-color: #FF9D32 ; }
 #canso-cau-dorella { background-color: #939100 ; }
 #nadales-i-canons { background-color: #019170 ; }
 
-/* links application */
+/*** links application ***/
 #link-app .link-item {
         padding: 0 0 0 3em;
 }
 
-#programmes-list ul {
-        margin:0; padding: 0;
-}
-#programmes-list li {
-        padding: 0 0 1em 0;
-}
+#programmes-list ul { margin:0; padding: 0; }
+#programmes-list li { padding: 0 0 1em 0; }
+
 #programmes table.docutils {
         border: 1px solid #ea7100 ;
         width: 75%;
 }
-#programmes table.docutils ul {
-        margin :0;
-}
-#programmes table.docutils col.col-1 {
+#programmes table.docutils ul { margin :0; padding-left: 3em; }
+#programmes table.docutils colgroup col.col-1 td {
         text-align: right ;
+        color: red ;
+        width: 90%;
 }
 
