--- a/templates/lieder-theme/articles/article_detail.html
+++ b/templates/lieder-theme/articles/article_detail.html
@@ -4,13 +4,15 @@
 
 {% block content %}
 <div id="content">
+ <div class="article-{{ object.section.slug }}-item">
 
 {% if object.image %}
     <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="{{ object.get_image_height }}"
     width="{{ object.get_image_width }}" />
-<br>
+<br/>
 {% endif %}
 {{ object.body }}
 
+ </div>
 </div>
 {% endblock %}
