--- a/templates/lieder-theme/articles/enregistraments_detail.html
+++ b/templates/lieder-theme/articles/enregistraments_detail.html
@@ -13,9 +13,9 @@
 <div id="sidebar">
  <div id="sidebar-menu">{% include "menus/get-menu-vert.html" %}</div>
 
-    <div id={{object.slug}} class="songlist-on-sidebar">
+    <div id="{{object.slug}}" class="songlist-on-sidebar">
         {% if object.image %}
-        <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height=74" width="74"/>
+        <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="74" width="74"/>
         {% endif %}
 
         <h3>{{ object.name }}</h3>
