--- a/media-admin/css/forms.css
+++ b/media-admin/css/forms.css
@@ -58,3 +58,6 @@ fieldset.monospace textarea { font-family:"Bitstream Vera Sans Mono",Monaco,"Cou
 .vLargeTextField, .vXMLLargeTextField { width:48em; }
 .flatpages-flatpage #id_content { height:40.2em; }
 .module table .vPositiveSmallIntegerField { width:2.2em; }
+
+/* LIEDER FORM FIELDS */
+fieldset.liederWideInput input { width: 48em ; }
