--- a/templates/lieder-theme/articles/article_list.html
+++ b/templates/lieder-theme/articles/article_list.html
@@ -1,20 +1,18 @@
-{% load i18n %}
 {% extends "base.html" %}
-
+{% load i18n %}
 
 {% block content %}
 <div id="content">
-
+ <div id="article-{{ object_list.0.section.slug }}-list">
 <ul>
 {% for article in object_list %}
-<div class="article-{{ article.section.slug }}">
-    <li>
-    <a href="{{ article.get_absolute_url }}">{{ article.name }}</a>
+    <li class="article-{{ article.section.slug }}-item">
+    <h2><a href="{{ article.get_absolute_url }}">{{ article.name }}</a></h2>
     </li>
-
-</div>
 {% endfor %}
 </ul>
 
+ </div>
 </div>
+
 {% endblock %}
